--- a/views/incl/footer.tt
+++ b/views/incl/footer.tt
@@ -6,12 +6,16 @@
 
   </div> <!-- page -->
 
-  <div id="ellapsed_time">
-    [% IF ellapsed_time %]
-    Ellapsed time [% ellapsed_time %]
+  <div id="elapsed_time">
+    [% IF elapsed_time %]
+    Elapsed time [% elapsed_time %]
     [% END %]
   </div>
 
 </div> <!-- body -->
+
 </body>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.11/jquery-ui.min.js"></script>
+  <script type="text/javascript" src="/js/digger.js"></script>
 </html>
